# modflow-devtools

./: .gitignore  .readthedocs.yml  DEVELOPER.md  HISTORY.md  MANIFEST.in  README.md  cliff.toml  debug_dfn.py  pyproject.toml  schema_polymorphism.txt  test_fixes.py  test_structured_recarray.py
.github/workflows/: ci.yml  release.yml
autotest/: test_build.py  test_codec.py  test_dfn.py  test_dfns.py  test_download.py  test_fixtures.py  test_grammar_generation.py  test_markers.py  test_misc.py  test_models.py  test_programs.py  test_snapshots.py  test_zip.py
docs/: conf.py  index.rst
docs/md/: dfn.md  download.md  fixtures.md  install.md  models.md  programs.md
docs/md/dev/: dfns.md  programs.md
examples/: grammar_demo.py
examples/temp/dfn/: chf-disv1d.dfn  gwe-dis.dfn  gwe-disu.dfn  gwe-disv.dfn  gwf-dis.dfn  gwf-disu.dfn  gwf-disv.dfn  gwf-ghbg.dfn  gwt-dis.dfn  gwt-disu.dfn  gwt-disv.dfn  gwt-src.dfn  olf-dis2d.dfn  olf-disv1d.dfn  olf-disv2d.dfn  prt-dis.dfn  prt-disv.dfn  prt-oc.dfn  prt-prp.dfn  swf-dis2d.dfn  swf-disv1d.dfn  swf-disv2d.dfn
modflow_devtools/: __init__.py  build.py  cli.py  codec.py  dfn.py  dfn2lark.py  dfn2toml.py  download.py  fixtures.py  grammar_generator.py  imports.py  latex.py  make_registry.py  markers.py  mf6.lark  misc.py  models.py  ostags.py  snapshots.py
modflow_devtools/data/: models.toml  registry.txt
modflow_devtools/dfn/: __init__.py  dfn2toml.py  fetch.py  field.py  legacy_parser.py  map.py  parse.py  v1.py  v2.py
modflow_devtools/dfn/schema/: block.py  field.py  ref.py  sln.py  v1.py  v2.py
modflow_devtools/dfns/: __init__.py  __main__.py  dfn2toml.py  registry.py
modflow_devtools/dfns/schema/: field.py
modflow_devtools/grammar/: __init__.py  base.lark  component.lark.j2  filters.py
modflow_devtools/grammars/: base.lark  component.lark.j2
modflow_devtools/models/: __init__.py  __main__.py
modflow_devtools/programs/: __init__.py  __main__.py  programs.csv
modflow_devtools/registry/: examples.toml  models.toml  registry.toml
scripts/: update_version.py
