[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modflow-devtools"
description = "Python tools for MODFLOW development"
authors = [
    {name = "Joseph D. Hughes", email = "modflow@usgs.gov"},
    {name = "Michael Reno", email = "mreno@ucar.edu"},
    {name = "Mike Taves", email = "mwtoews@gmail.com"},
    {name = "Wes Bonelli", email = "wbonelli@ucar.edu"},
]
maintainers = [
    {name = "Joseph D. Hughes", email = "modflow@usgs.gov"},
]
keywords = [
    "MODFLOW",
    "development",
    "utilities",
    "groundwater",
    "hydrogeology"
]
readme = "README.md"
license = {text = "CC0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Hydrology"
]
requires-python = ">=3.9"
dynamic = ["version"]

[project.optional-dependencies]
build = [
    "build",
    "twine"
]
lint = [
    "codespell[toml]",
    "ruff"
]
test = [
    "modflow-devtools[lint]",
    "coverage",
    "flaky",
    "filelock",
    "meson!=0.63.0",
    "ninja",
    "numpy",
    "pandas",
    "pytest!=8.1.0",
    "pytest-cov",
    "pytest-dotenv",
    "pytest-xdist",
    "PyYaml",
    "syrupy"
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser"
]
dfn = [
    "boltons",
    "tomli",
    "tomli-w"
]
dev = ["modflow-devtools[lint,test,docs,dfn]"]

[dependency-groups]
build = [
    "build",
    "twine"
]
lint = [
    "codespell[toml]",
    "ruff"
]
test = [
    "modflow-devtools[lint]",
    "coverage",
    "flaky",
    "filelock",
    "meson!=0.63.0",
    "ninja",
    "numpy",
    "pandas",
    "pytest!=8.1.0",
    "pytest-cov",
    "pytest-dotenv",
    "pytest-xdist",
    "PyYaml",
    "syrupy"
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser"
]
dfn = [
    "boltons",
    "tomli",
    "tomli-w"
]
dev = [
    {include-group = "build"},
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "docs"},
    {include-group = "dfn"}
]

[project.urls]
"Documentation" = "https://modflow-devtools.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/MODFLOW-USGS/modflow-devtools/issues"
"Source Code" = "https://github.com/MODFLOW-USGS/modflow-devtools"

[tool.hatch.build.targets.sdist]
only-include = ["modflow_devtools"]

[tool.hatch.build.targets.wheel]
packages = ["modflow_devtools"]

[tool.hatch.version]
path = "modflow_devtools/__init__.py"

[tool.codespell]
skip = "cliff.toml"
ignore-words-list = [
    "nam",
    "wel",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    # "ARG",  # flake8-unused-arguments
    "C4",   # flake8 comprehensions
    "D409", # pydocstyle - section-underline-matches-section-length
    "E", "W", # pycodestyle
    "F",    # Pyflakes
    "I",    # isort 
    "PTH",  # flake8-use-pathlib
    "RUF",  # Ruff-specific rules
    "UP",   # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"modflow_devtools/zip.py" = ["PTH"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
